--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: #6532ca;
+  color: white;
+  padding: 15px;
+  font-size: 2em;
+}
+.nav a {
+  color: white;
+  text-decoration: none;
+}
+
+.flag {
+  height: 300px;
+  width: 500px;
+  border: 1px solid black;
+}
