responsive of main page lookin snazzy

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ code {
     left: 0px;
     right: 0px;
     z-index: 1; */
-    background-color: red;
+    background-color: black;
   }
 
     .navM {
@@ -50,22 +50,32 @@ code {
       left: 0px;
       right: 0px;
       z-index: 1; */
-      background-color: yellow;
+      background-color: black;
     }
 
     .navL {
       display: flex;
       justify-content: space-around;
       padding: 15px;
-      font-size: 1em;
+      font-size: 2em;
       /* position: absolute;
       left: 0px;
       right: 0px;
       z-index: 1; */
-      background-color: blue;
+      background-color: black;
     }
 
-    .nav a {
+    .navS a {
+  color: white;
+  text-decoration: none;
+}
+
+.navM a {
+  color: white;
+  text-decoration: none;
+}
+
+.navL a {
   color: white;
   text-decoration: none;
 }
@@ -90,30 +100,82 @@ display: grid;
 grid-template-columns: 1fr;
 justify-items: left;
 align-content: center;
-position: absolute;
+/* position: absolute;
 left: 0px;
 right: 0px;
-top: 10px;
+top: 10px; */
+}
+
+.continents a{
+  display: grid;
+  justify-items: center;
+  text-decoration: none;
+  border-top: 3px solid black;
+}
+
+#continentsS {
+  justify-items: center;
+  grid-template-columns: 1fr;
+}
+
+#continentsS .continent{
+  font-size: 2em;
+}
+
+#continentsS img {
+  height: 200px;
+  width: auto;
+  padding: 30px;
+}
+
+#continentsM {
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+}
+
+#continetsM .continent {
+  font-size: 2em;
+}
+
+#continentsM img {
+  height: 200px;
+  width: auto;
+  padding: 30px;
+}
+
+#continentsL {
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+#continentL .continent {
+  font-size: 3em;
+}
+
+#continentsL img {
+  height: 300px;
+  width: auto;
+  padding: 30px;
 }
 
 .continent {
-  color: white;
-  background-color: rgba(0, 0, 0, .7);
-  margin-left: 20px;
+  color: black;
   width: 175px;
   padding: 15px;
 }
 
 #Africa {
-  color: white;
+
 }
 
 #Asia {
-  color: white;
+  background-color: green;
+  border-radius: 30px;
 }
 
 #Australia {
   color: white;
+  
 }
 
 #Europe {
@@ -134,7 +196,25 @@ top: 10px;
   border: 1px solid black;
 }
 
-.jumbotron {
+.jumbotronS {
+  height: 500px;
+  width: auto;
+  margin: 0px;
+  overflow: hidden;
+  /* position: absolute;
+  z-index: -1; */
+}
+
+.jumbotronS img{
+  height:100%;
+  width: 100%;
+  object-fit: cover;
+  /* position: absolute;
+  z-index: -1; */
+
+}
+
+.jumbotronM {
   height: 700px;
   width: auto;
   margin: 0px;
@@ -143,7 +223,25 @@ top: 10px;
   z-index: -1; */
 }
 
-.jumbotron img{
+.jumbotronM img{
+  height:100%;
+  width: 100%;
+  object-fit: cover;
+  /* position: absolute;
+  z-index: -1; */
+
+}
+
+.jumbotronL {
+  height: 1000px;
+  width: 100%;
+  margin: 0px;
+  overflow: hidden;
+  /* position: absolute;
+  z-index: -1; */
+}
+
+.jumbotronL img{
   height:100%;
   width: 100%;
   object-fit: cover;
