working currency converter, added but now need to integrate into the structure of the page

--- a/src/index.css
+++ b/src/index.css
@@ -411,6 +411,10 @@ top: 10px; */
   font-size: 1em;
 }
 
+.countryListL h1{
+  color: black;
+}
+
 .countryListL h2{
   width: 590px;
   padding: 20px;
