--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,31 @@ code {
     monospace;
 }
 
+.icon {
+  color: white;
+}
+
+.dropS {
+  position: absolute;
+  display: grid;
+  background-color: black;
+  justify-content: left;
+  width:fit-content;
+  z-index: 10;
+}
+
+.dropS a {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  padding: 5px;
+}
+
+.dropM, .dropL {
+  display: none;
+}
+
+
 .nav {
   display: flex;
   justify-content: space-around;
@@ -31,7 +56,7 @@ code {
 
   .navS {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding: 15px;
     font-size: 1em;
     /* position: absolute;
@@ -39,6 +64,10 @@ code {
     right: 0px;
     z-index: 1; */
     background-color: black;
+  }
+
+  .contNavS {
+    display: none;
   }
 
     .navM {
@@ -68,11 +97,16 @@ code {
     .navS a {
   color: white;
   text-decoration: none;
+  display: none;
 }
 
 .navM a {
   color: white;
   text-decoration: none;
+}
+
+.navM .icon, .navL .icon {
+  display: none;
 }
 
 .navM span {
@@ -176,25 +210,29 @@ top: 10px; */
 
 .countryS {
   background-color: rgb(249, 241, 223);
-  min-height: 600px;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.countryS h1 {
+  font-size: 3em;
 }
 
 .countryS img {
   height: auto;
-  width: 375px;
+  margin: 0 auto;
+  width: 90vw;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
 }
 
 .infoCard {
   padding: 30px;
-  text-align: left;
 }
 
-.infoCard span {
+/* .infoCard span {
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
-}
+} */
 
 .countryS button {
   width: 200px;
@@ -218,14 +256,72 @@ top: 10px; */
   padding: 8px;
   margin: 0 auto;
   margin-top: 30px;
-  bottom: 30px;
+  margin-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+}
+
+.countryS .infoCard{
+  display: grid;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  padding: 0px;
+  justify-items: center;
+  align-items: center;
+}
+
+.countryS .infoCard div {
+  justify-items: center;
+  width: 170px;
+  height: 170px;
+  margin: 0px;
+}
+
+.countryS .infoCard div h2 {
+  font-size: 1em;
+}
+
+.countryS .infoCard svg {
+  height: 50px;
+  width: auto;
+}
+
+.countryS .exchange {
+  display: grid;
+  grid-column: 1 / 3;
+  justify-content: center;
+  align-content: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+  height: 200px;
+  width: 200px;
+  background-color: gold;
+  border-radius: 50%;
+}
+
+.countryS .exchange h1 {
+  font-size: 1em;
+}
+
+.countryS .exchange form input{
+  width: 110px;
+}
+
+.countryS .exchange h2 {
+  font-size: 1em
+}
+
+.countryS .infoCard span {
+  font-size: 1.5em;
+  padding: 20px, auto, 20px, auto;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
 }
 
 .countryM {
   background-color: rgb(249, 241, 223);
-  height: 90vh;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .countryM h1 {
@@ -234,26 +330,16 @@ top: 10px; */
 
 .countryM img {
   height: auto;
-  width: 500px;
+  width: 90vw;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
 }
 
-.infoCard {
-  padding: 30px;
-  text-align: left;
-}
-
-.infoCard span {
-  color: white;
-  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
-}
-
-.countryM button {
+.countryM button, .countryL button {
   width: 300px;
   font-size: 1.4em;
 }
 
-.countryM .first{
+.countryM .first, .countryL .first{
   background-color: white;
   border-radius: 20px;
   font-weight: bold;
@@ -263,7 +349,7 @@ top: 10px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
 }
 
-.countryM .second {
+.countryM .second, .countryL .second {
   background-color: white;
   border-radius: 20px;
   font-weight: bold;
@@ -271,64 +357,181 @@ top: 10px; */
   padding: 8px;
   margin: 0 auto;
   margin-top: 30px;
-  bottom: 30px;
+  margin-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
 }
 
-.countryL {
-  background-color: rgb(249, 241, 223);
-  min-height: 90vh;
-  padding: 30px;
+.countryM .infoCard{
+  display: grid;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  padding: 0px;
+  justify-items: center;
+  align-items: center;
 }
 
-.countryL h1 {
-  font-size: 3em;
+.countryM .infoCard div {
+  justify-items: center;
+  width: 250px;
+  height: 250px;
+  margin: 0px;
 }
 
-.countryL img {
-  height: auto;
-  width: 600px;
+.countryM .infoCard div h2 {
+  font-size: 1.5em;
+}
+
+.countryM .infoCard svg {
+  height: 80px;
+  width: auto;
+}
+
+.countryM .exchange {
+  display: grid;
+  grid-column: 1 / 3;
+  justify-content: center;
+  align-content: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+  /* height: 250px;
+  width: 250px; */
+  background-color: gold;
+  border-radius: 50%;
 }
 
-.infoCard {
-  padding: 30px;
-  text-align: left;
-  width:fit-content;
-  margin: 0 auto;
+.countryM .exchange h1 {
+  font-size: 1.5em;
 }
 
-.infoCard h2 {
-  font-size: 2em;
-  width: fit-content;
+.countryM .exchange form input{
+  width: 130px;
 }
 
-.infoCard span {
+.countryM .exchange h2 {
+  font-size: 1em
+}
+
+.countryM .infoCard span {
+  font-size: 1.5em;
+  padding: 20px, auto, 20px, auto;
   color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
 }
 
-.countryL button {
-  width: 400px;
+.countryL {
+  background-color: rgb(249, 241, 223);
+  padding: 30px;
+}
+
+.countryL h1 {
+  font-size: 3.5em;
+  padding: 20px;
+}
+
+.countryL img {
+  height: auto;
+  width: 800px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+}
+
+.countryL .infoCard{
+  display: grid;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  padding: 0px;
+  justify-items: center;
+  align-items: center;
+}
+
+.countryL .infoCard div {
+  justify-items: center;
+  width: 350px;
+  height: 350px;
+  margin: 0px;
+}
+
+.countryL .infoCard div h2 {
+  font-size: 1.5em;
+}
+
+.countryL .infoCard svg {
+  height: 100px;
+  width: auto;
+}
+
+.countryL .exchange {
+  display: grid;
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  justify-content: center;
+  align-content: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+  /* height: 250px;
+  width: 250px; */
+  background-color: gold;
+  border-radius: 50%;
+}
+
+.countryL .exchange h1 {
   font-size: 2em;
 }
 
-.countryL .first{
+.countryL .exchange form input{
+  width: 180px;
+}
+
+.countryL .exchange h2 {
+  font-size: 1em
+}
+
+.countryL .infoCard span {
+  font-size: 2em;
+  padding: 20px, auto, 20px, auto;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
+}
+
+/* .infoCard {
+  padding: 30px;
+  text-align: left;
+  width:fit-content;
+  margin: 0 auto;
+} */
+
+/* .infoCard h2 {
+  font-size: 2em;
+  width: fit-content;
+} */
+
+/* .infoCard span {
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
+} */
+
+/* .countryL button {
+  width: 400px;
+  font-size: 2em;
+} */
+
+/* .countryL .first{
   background-color: white;
   border-radius: 20px;
   font-weight: bold;
   padding: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-}
+} */
 
-.countryL .second {
+/* .countryL .second {
   background-color: white;
   border-radius: 20px;
   font-weight: bold;
   padding: 8px;
   margin: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-}
+} */
 
 .jumbotronS {
   height: 500px;
@@ -540,6 +743,11 @@ top: 10px; */
   background-color:rgb(255, 140, 238);
 }
 
+.wishListS h1 {
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
+}
+
 .wishListS h2 {
   background-color: rgb(215, 20, 192);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
@@ -606,6 +814,11 @@ top: 10px; */
   justify-items: center;
   align-content:flex-start;
   background-color:rgb(40, 55, 225);;
+}
+
+.passListS h1 {
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
 }
 
 .passListS h2 {
