--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-* {
-  /* border: 1px solid black; */
-}
-
 body {
   margin: 0;
   position: relative;
@@ -24,7 +20,7 @@ code {
 .dropS {
   position: absolute;
   display: grid;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   justify-content: left;
   width:fit-content;
   z-index: 10;
@@ -47,54 +43,38 @@ code {
   justify-content: space-around;
   padding: 15px;
   font-size: 1em;
-  /* position: absolute;
-  left: 0px;
-  right: 0px;
-  z-index: 1; */
   background-color: black;
 }
 
-  .navS {
-    display: flex;
-    justify-content: flex-start;
-    padding: 15px;
-    font-size: 1em;
-    /* position: absolute;
-    left: 0px;
-    right: 0px;
-    z-index: 1; */
-    background-color: black;
-  }
+.navS {
+  display: flex;
+  justify-content: flex-start;
+  padding: 15px;
+  font-size: 1em;
+  background-color: black;
+}
 
-  .contNavS {
-    display: none;
-  }
+.contNavS {
+  display: none;
+}
 
-    .navM {
-      display: flex;
-      justify-content: space-around;
-      padding: 15px;
-      font-size: 1em;
-      /* position: absolute;
-      left: 0px;
-      right: 0px;
-      z-index: 1; */
-      background-color: black;
-    }
+.navM {
+  display: flex;
+  justify-content: space-around;
+  padding: 15px;
+  font-size: 1em;
+  background-color: black;
+}
 
-    .navL {
-      display: flex;
-      justify-content: space-around;
-      padding: 15px;
-      font-size: 2em;
-      /* position: absolute;
-      left: 0px;
-      right: 0px;
-      z-index: 1; */
-      background-color: black;
-    }
+.navL {
+  display: flex;
+  justify-content: space-around;
+  padding: 15px;
+  font-size: 2em;
+  background-color: black;
+}
 
-    .navS a {
+.navS a {
   color: white;
   text-decoration: none;
   display: none;
@@ -124,37 +104,17 @@ code {
   text-decoration: none;
 }
 
-.foot {
-  display: flex;
-  justify-content: space-around;
-  color: white;
-  background-color: black;
-  padding: 15px;
-  font-size: 1em;
-  /* position: absolute;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  z-index: 1; */
-  
-}
-
 .continents {
 display: grid;
 grid-template-columns: 1fr;
 justify-items: left;
 align-content: center;
-/* position: absolute;
-left: 0px;
-right: 0px;
-top: 10px; */
 }
 
 .continents a{
   display: grid;
   justify-items: center;
   text-decoration: none;
-  /* border-top: 3px solid black; */
 }
 
 #continentsS {
@@ -228,11 +188,6 @@ top: 10px; */
 .infoCard {
   padding: 30px;
 }
-
-/* .infoCard span {
-  color: white;
-  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
-} */
 
 .countryS button {
   width: 200px;
@@ -394,8 +349,6 @@ top: 10px; */
   justify-content: center;
   align-content: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-  /* height: 250px;
-  width: 250px; */
   background-color: gold;
   border-radius: 50%;
 }
@@ -469,8 +422,6 @@ top: 10px; */
   justify-content: center;
   align-content: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-  /* height: 250px;
-  width: 250px; */
   background-color: gold;
   border-radius: 50%;
 }
@@ -494,62 +445,18 @@ top: 10px; */
   text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
 }
 
-/* .infoCard {
-  padding: 30px;
-  text-align: left;
-  width:fit-content;
-  margin: 0 auto;
-} */
-
-/* .infoCard h2 {
-  font-size: 2em;
-  width: fit-content;
-} */
-
-/* .infoCard span {
-  color: rgb(255, 255, 255);
-  text-shadow: 1px 1px 2px black, 0 0 25px gray, 0 0 5px black;
-} */
-
-/* .countryL button {
-  width: 400px;
-  font-size: 2em;
-} */
-
-/* .countryL .first{
-  background-color: white;
-  border-radius: 20px;
-  font-weight: bold;
-  padding: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-} */
-
-/* .countryL .second {
-  background-color: white;
-  border-radius: 20px;
-  font-weight: bold;
-  padding: 8px;
-  margin: 30px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
-} */
-
 .jumbotronS {
   height: 500px;
   width: auto;
   margin: 0px;
   overflow: hidden;
   border-bottom: 10px solid black;
-  /* position: absolute;
-  z-index: -1; */
 }
 
 .jumbotronS img{
   height:100%;
   width: 100%;
   object-fit: cover;
-  /* position: absolute;
-  z-index: -1; */
-
 }
 
 .jumbotronM {
@@ -558,17 +465,12 @@ top: 10px; */
   margin: 0px;
   overflow: hidden;
   border-bottom: 15px solid black;
-  /* position: absolute;
-  z-index: -1; */
 }
 
 .jumbotronM img{
   height:100%;
   width: 100%;
   object-fit: cover;
-  /* position: absolute;
-  z-index: -1; */
-
 }
 
 .jumbotronL {
@@ -577,17 +479,12 @@ top: 10px; */
   margin: 0px;
   overflow: hidden;
   border-bottom: 20px solid black;
-  /* position: absolute;
-  z-index: -1; */
 }
 
 .jumbotronL img{
   height:100%;
   width: 100%;
   object-fit: cover;
-  /* position: absolute;
-  z-index: -1; */
-
 }
 
 .mainContain {
@@ -934,9 +831,12 @@ top: 10px; */
 } 
 
 .foot {
-  margin-bottom: 10px;
   display: flex;
   justify-content: center;
+  color: white;
+  background-color: black;
+  padding: 15px;
+  font-size: 1em;
 }
 
 .foot svg {
